# Python-FastAPI-MongoDB-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py
app/controllers/: endereco.py  pessoa.py
app/helpers/: endereco.py  pessoa.py
app/models/: endereco.py  pessoa.py
app/routes/: endereco.py  pessoa.py
