[tool.poetry]
name = "teste_api"
version = "0.1.0"
description = ""
authors = ["Joismar <joismar@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pymongo = "^3.11.3"
motor = "^2.3.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
